[metadata]
name = alternativez
version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH1/alternativez
description = A small library for managing alternative packages
long_description = file: ReadMe.md
keywords = setuptools, debian alternatives
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
py_modules = alternativez
test_suite = tests.tests.Tests

[options.entry_points]
distutils.setup_keywords = alternativez = alternativez:setuptoolsHelper

[build-system]
requires = ["setuptools", "wheel"]

